# File-Processing-Project3

./: .gitignore  CMakeLists.txt  fdevicedriver.c  ftlmgr.c  hybridmapping.h  main.c
.github/: README.md
.github/workflows/: test.yml
tests/: test_ftl_complex_scenario.c  test_ftl_open.c  test_ftl_read.c  test_ftl_read_nonexistent.c  test_ftl_write.c  test_ftl_write_different_blocks.c  test_ftl_write_overwrite.c  test_ftl_write_repeated.c  test_ftl_write_single_block.c  test_spare_area_lsn.c
